--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>INICIO | BIOGESTORES</title>
+	<title>NOSOTROS | BIOGESTORES</title>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="fontello/css/fontello.css">
 	<link rel="stylesheet" href="css/estilos.css">
@@ -13,13 +13,13 @@
 	<nav class="menu">
 		<ul>
 			<li>
-				<a href="index.html" class="menu-activo">
+				<a href="index.html">
 					<i class="icon-home"></i>
 					<span>Inicio</span>
 				</a>
 			</li>
 			<li>
-				<a href="nosotros.html">
+				<a href="nosotros.html" class="menu-activo">
 					<i class="icon-group"></i>
 					<span>Nosotros</span>
 				</a>
@@ -48,7 +48,7 @@
 	</div>
 	<div class="contenedor-fila">
 		<div class="contenedor-50 centrar">
-			<h1>Biogestores</h1>
+			<h1>Nosotros</h1>
 			<p>
 				Un biodigestor es un sistema mediante
 				el cual se genera un ambiente adecuado
