--- a/contactenos.html
+++ b/contactenos.html
@@ -49,6 +49,9 @@
 	<div class="contenedor-fila">
 		<div class="contenedor-50 centrar">
 			<h1>Contáctenos Carlos</h1>
+			<h1>Contáctenos Carlos</h1>
+			<h1>Contáctenos Carlos</h1>
+			<h1>Contáctenos Carlos</h1>
 			<p>
 				Un biodigestor es un sistema mediante
 				el cual se genera un ambiente adecuado
