--- a/servicios.html
+++ b/servicios.html
@@ -111,7 +111,7 @@
 		<div class="contenedor-50 centrar">
 			<div class="dv11">
 				
-			<p class="textleft"> 
+			  <p class="textleft"> 
 				La planta de balón se compone de un tubular en 
 				material plástico completamente 
 				sellado, la entrada y la salida están sujetas directamente 
@@ -122,13 +122,13 @@
 				se recomienda para aquellos sitios donde predominan las 
 				temperaturas altas y constantes.
 
-			</p>
-		</div>
-		<div class="img">
-			<img src="img/flucon.jpg" alt="Biodigestor de flujo continuo o planta de balón" height="200" width="350">
-		</div>
-		<div class="dv13">
-			<p class="textright"> 
+			  </p>
+		    </div>
+		    <div class="img">
+			 <img src="img/flucon.jpg" alt="Biodigestor de flujo continuo o planta de balón" height="200" width="350">
+		    </div>
+		    <div class="dv13">
+			   <p class="textright"> 
 				
 				Entre sus ventajas están que
 				sus materiales de construcción son de fácil transporte; su instalación y adecuación del sitio 
@@ -141,8 +141,17 @@
 				biodigestor.
 
 				</p>
+		    </div>
 		</div>
-		</div>
+		<div class="especificaciones1">
+		 <nav class="especificaciones2">
+			<h1>Para que tengas en cuenta</h1>
+		 </nav>
+		 <table>
+
+			
+		 </table>
+	    </div>
 	</div>
 	<script src="js/principal.js"></script>
 </body>
