--- a/servicios.html
+++ b/servicios.html
@@ -143,15 +143,67 @@
 				</p>
 		    </div>
 		</div>
-		<div class="especificaciones1">
-		 <nav class="especificaciones2">
+		<div class="barraespecificaciones">
+		 <nav class="navespecificaciones">
 			<h1>Para que tengas en cuenta</h1>
 		 </nav>
-		 <table>
-
+		 <div>
+		 <div class="titconversiones">
+		 <h3 style="text-align: center;">Conversiones de materia prima</h3>
+		</div>
+		<div class="imgbiomasa">
+			<img src="img/biomasa orgánica.jpg" height="253" width="450">
+		</div>
+		<div>
 			
-		 </table>
-	    </div>
+			<table class="diseñotabalespecificaciones">
+				<tr style="text-align: center;">
+					<td class="materiales">Material</td>
+					<td class="materiales">Peso (kg)</td>
+					<td class="materiales">Producción de biogás (L)</td>
+					<td class="materiales">Duración (horas)</td>
+					<td class="materiales">Producción de energía eléctrica (kWh)</td>
+				</tr>
+				<tr style="text-align: center;">
+					<td class="materiales">Residuos de cocina</td>
+					<td>78</td>
+					<td>5500</td>
+					<td>78</td>
+					<td>26</td>
+				</tr>
+				<tr style="text-align: center;">
+					<td class="materiales">Estiércol bovino/equino</td>
+					<td>300</td>
+					<td>12000</td>
+					<td>24</td>
+					<td>17</td>
+				</tr>
+				<tr style="text-align: center;">
+					<td class="materiales">Gallinaza y pollinaza</td>
+					<td>160</td>
+					<td>10400</td>
+					<td>42</td>
+					<td>15</td>	
+				</tr>
+
+				<tr style="text-align: center;">
+					<td class="materiales">Excretas humanas</td>
+					<td>160</td>
+					<td>9600</td>
+					<td>42</td>
+					<td>14</td>	
+				</tr>
+
+				<tr style="text-align: center;">
+					<td class="materiales">Biomasa vegetal</td>
+					<td>325</td>
+					<td>16250</td>
+					<td>71</td>
+					<td>23</td>	
+				</tr>
+			</table>
+
+		</div>
 	</div>
 	<script src="js/principal.js"></script>
 </body>
