--- a/servicios.html
+++ b/servicios.html
@@ -155,7 +155,6 @@
 			<img src="img/biomasa orgánica.jpg" height="253" width="450">
 		</div>
 		<div>
-			
 			<table class="diseñotabalespecificaciones">
 				<tr style="text-align: center;">
 					<td class="materiales">Material</td>
@@ -200,6 +199,33 @@
 					<td>16250</td>
 					<td>71</td>
 					<td>23</td>	
+				</tr>
+			</table>
+
+		</div>
+		<div class="barraespecificaciones">
+			<nav class="navespecificaciones">
+				<h1>Valor aproximado de nuestros servicios</h1>
+			 </nav>
+		</div>
+		<div class="precios">
+			<table class="tablaprecios">
+				<tr style="text-align: center;">
+					<td class="materiales">Sistema</td>
+					<td class="materiales">Rango de precios(millones)</td>		
+				</tr>
+				<tr style="text-align: center;">
+					<td class="materiales">Biodigestor de flujo continuo</td>
+					<td>2-5</td>					
+				</tr>
+				<tr style="text-align: center;">
+					<td class="materiales">Biodigestor de campana fija</td>
+					<td>4-8</td>
+				</tr>
+		
+				<tr style="text-align: center;">
+					<td class="materiales">BTLC</td>
+					<td>7-12</td>
 				</tr>
 			</table>
 
