--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="fontello/css/fontello.css">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body class="fondo" background="img/inicio.jpg"> 
 	
 	<nav class="menu">
 		<ul>
@@ -41,15 +41,15 @@
 
 	<div class="contenedor-padre">
 		<div class="contenedor-fila">
-			<div class="contenedor-100">
-				<img src="img/biogestor-1.jpg" class="imagen-100" alt="">
-			</div>
+			
 		</div>
 	</div>
 	<div class="contenedor-fila">
 		<div class="contenedor-50 centrar">
-			<h1>Biogestores</h1>
-			<p>
+			<div class="tituloinicio">
+				<h1>Biogestores de Colombia</h1>
+
+				<p class="parrafoinicio">
 				Un biodigestor es un sistema mediante
 				el cual se genera un ambiente adecuado
 				para que la materia orgánica se descomponga con ausencia de oxígeno. A este
@@ -57,7 +57,19 @@
 				muy similar al estómago de una persona
 				o un animal, ya que dentro del biodigestor encontramos que viven unas bacterias
 				que descomponen el estiércol y otros residuos orgánicos, que se convierten en biogás y biofertilizante
-			</p>
+				<br><br>
+				El biodigestor es una tecnología que permite mejorar el aprovechamiento 
+				tradicional de los desechos agrarios, convirtiéndolos en recursos que producen 
+				biogás (energía) y biol (biofertilizante).
+				</p>
+				<a class="boton" href="http://mail.google.com">E-mail</a>
+				<a class="boton" href="http://www.fundacionaquae.org/biodigestor/">Leer más</a>
+				<a href="http://www.facebook.com"><img class="redes" src="img/face.png" width="40" height="40"></a>
+				<a href="http://www.twitter.com"><img class="redes" src="img/twitter.png" width="50" height="40"></a>
+			</div>
+			<div class="logoempresa">
+				<img src="img/Biodigestores de Colombia.jpg" width="500" height="350">
+			</div>
 		</div>
 	</div>
 	<script src="js/principal.js"></script>
