--- a/nosotros.html
+++ b/nosotros.html
@@ -42,7 +42,7 @@
 	<div class="contenedor-padre">
 		<div class="contenedor-fila">
 			<div class="contenedor-100">
-				<img src="img/biogestor-1.jpg" class="imagen-100" alt="">
+				<img src="img/biogestor-1.jpg" class="imagen-100" alt="" height="100">
 			</div>
 		</div>
 	</div>
@@ -50,13 +50,7 @@
 		<div class="contenedor-50 centrar">
 			<h1>Nosotros</h1>
 			<p>
-				Un biodigestor es un sistema mediante
-				el cual se genera un ambiente adecuado
-				para que la materia orgánica se descomponga con ausencia de oxígeno. A este
-				fenómeno se le llama «digestión anaeróbica». Este sistema funciona de una manera
-				muy similar al estómago de una persona
-				o un animal, ya que dentro del biodigestor encontramos que viven unas bacterias
-				que descomponen el estiércol y otros residuos orgánicos, que se convierten en biogás y biofertilizante
+				
 			</p>
 		</div>
 	</div>
