--- a/servicios.html
+++ b/servicios.html
@@ -42,7 +42,7 @@
 	<div class="contenedor-padre">
 		<div class="contenedor-fila">
 			<div class="contenedor-100">
-				<img src="img/biogestor-1.jpg" class="imagen-100" height="100">
+				<img src="img/biogestor-1.jpg" class="imagen-100" height="100" width="20">
 			</div>
 		</div>
 	</div>
@@ -68,13 +68,11 @@
 				
 			Entre sus ventajas se tiene una larga vida útil de aproximadamente 20 años; no posee partes 
 			móviles y/o metálicas que se puedan oxidar, aunque la construcción en concreto deberá ser 
-			durable; y su construcción es subterránea, que lo protege contra bajas temperaturas [Hilbert 2003]. 
-			Entre sus desventajas se encuentran que la presión de gas no es constante; la presión puede ser
-			muy alta, por ello la cúpula tiene que ser cuidadosamente sellada e impermeabilizada para evitar
-			porosidades, grietas y escapes de gas; y presenta costos de construcción bajos. [Hilbert 2003].
+			durable; y su construcción es subterránea, que lo protege contra bajas temperaturas. 
 				</p>
 		</div>
 		</div>
+		<hr class="saltos">
 		<h3>Biodigestor tipo laguna cubierta (BTLC)</h3>
 		<div class="contenedor-50 centrar">
 			<div class="dv11">
@@ -101,12 +99,11 @@
 				grupo electrógeno. El exceso de biogás puede quemarse en una 
 				antorcha, produciendo dióxido de carbono y agua; este CO en 
 				comparación al metano, es prácticamente inocuo, pues tiene 
-				21 veces menos poder de gas de efecto invernadero, con lo 
-				que se disminuye el impacto ambiental del proceso productivo(Moncayo, 2014). 
-				Vida útil aprox. 20 años.
+				21 veces menos poder de gas de efecto invernadero.
 				</p>
 		</div>
 		</div>
+		<hr class="saltos">
 		<h3>Biodigestor de flujo continuo o planta de balón</h3>
 		<div class="contenedor-50 centrar">
 			<div class="dv11">
@@ -118,9 +115,7 @@
 				a las paredes de la planta. 
 				La parte inferior de la planta, en un 75% del volumen 
 				constituye la masa de fermentación, y en la parte superior, 
-				el 25% restante, se almacena el biogás. Este tipo de planta 
-				se recomienda para aquellos sitios donde predominan las 
-				temperaturas altas y constantes.
+				el 25% restante, se almacena el biogás.
 
 			  </p>
 		    </div>
@@ -134,11 +129,7 @@
 				sus materiales de construcción son de fácil transporte; su instalación y adecuación del sitio 
 				son sencillas; es apropiado en sitios con nivel freático alto,por su construcción 
 				horizontal; y entre los tipos de biodigestores, es el menor costo de construcción y 
-				operación.Son desventajas, 
-				la baja presión de gas; una vida útil corta, entre 3 y 8 años, dependiendo del material 
-				que se seleccione; debe protegerse contra los rayos solares; y el material plástico 
-				está sujeto a daños, siendo necesario en lo posible encerrarse el área adyacente al 
-				biodigestor.
+				operación.
 
 				</p>
 		    </div>
