--- a/servicios.html
+++ b/servicios.html
@@ -143,7 +143,7 @@
 		 <h3 style="text-align: center;">Conversiones de materia prima</h3>
 		</div>
 		<div class="imgbiomasa">
-			<img src="img/biomasa orgánica.jpg" height="253" width="450">
+			<img src="img/biomasa-organica.jpg" height="253" width="450">
 		</div>
 		<div>
 			<table class="diseñotabalespecificaciones">
