--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="contenedor-fila">
 		<div class="contenedor-50 centrar">
 			<div class="tituloinicio">
-				<h1>Biogestores de Colombia</h1>
+				<h1>Biodigestores de Colombia</h1>
 
 				<p class="parrafoinicio">
 				Un biodigestor es un sistema mediante
