--- a/servicios.html
+++ b/servicios.html
@@ -42,7 +42,18 @@
 	<div class="contenedor-padre">
 		<div class="contenedor-fila">
 			<div class="contenedor-100">
-				<img src="img/biogestor-1.jpg" class="imagen-100" height="100" width="20">
+				<table class="decorativo">
+					<tr>
+						<td class="imgdecorativo" background="img/biogestor-1.jpg">	
+						</td>
+						<td class="imgdecorativo" background="img/Biodigestor-2.jpg">
+						</td >
+						<td class="imgdecorativo" background="img/biodigestor-3.jpg">
+						</td >
+						<td class="imgdecorativo" background="img/biodigestor-4.jpg">
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 	</div>
@@ -102,6 +113,7 @@
 				21 veces menos poder de gas de efecto invernadero.
 				</p>
 		</div>
+		
 		</div>
 		<hr class="saltos">
 		<h3>Biodigestor de flujo continuo o planta de balón</h3>
@@ -203,7 +215,7 @@
 			<table class="tablaprecios">
 				<tr style="text-align: center;">
 					<td class="materiales">Sistema</td>
-					<td class="materiales">Rango de precios(millones)</td>		
+					<td class="materiales">Rango de precios (millones de pesos)</td>		
 				</tr>
 				<tr style="text-align: center;">
 					<td class="materiales">Biodigestor de flujo continuo</td>
@@ -221,6 +233,7 @@
 			</table>
 
 		</div>
+		<img src="img/fondoservicios.jpg" width="100%" height="100px">
 	</div>
 	<script src="js/principal.js"></script>
 </body>
