--- a/nosotros.html
+++ b/nosotros.html
@@ -42,18 +42,98 @@
 	<div class="contenedor-padre">
 		<div class="contenedor-fila">
 			<div class="contenedor-100">
-				<img src="img/biogestor-1.jpg" class="imagen-100" alt="" height="100">
+				<table class="decorativo">
+					<tr>
+						<td class="imgdecorativo" background="img/biogestor-1.jpg">	
+						</td>
+						<td class="imgdecorativo" background="img/Biodigestor-2.jpg">
+						</td >
+						<td class="imgdecorativo" background="img/biodigestor-3.jpg">
+						</td >
+						<td class="imgdecorativo" background="img/biodigestor-4.jpg">
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 	</div>
 	<div class="contenedor-fila">
-		<div class="contenedor-50 centrar">
-			<h1>Nosotros</h1>
-			<p>
+	
+			<div>
+				<div  class="mision">
+					<h1>MISIÓN</h1>
+
+					<p class="misiontxt">
+					Lograr que la población rural de Colombia tenga acceso 
+					al servicio de biogás, de calidad a un bajo costo y 
+					aplicando tecnología de punta , que contribuya a agilizar 
+					los procesos de sus empresas agropecuarias y de esta manera 
+					aportar al desarrollo del sector, mejorar la calidad de 
+					vida de los campesinos y cooperar con el cuidado medioambiental.
+					</p>
+
+				</div>
+				<div  class="vision">
+					<h1>VISIÓN</h1>
+
+					<p class="visiontxt">
+					Para el 2022 afianzar y mejorar nuestros servicios actuales 
+					e incursionar en un nuevo modelo de negocio que incluya la 
+					instalación de paneles solares, brindándole al sector agropecuario 
+					soluciones amigables con el medio ambiente a la necesidad 
+					de servicios básicos insatisfechos.
+					</p>
+
+				</div>
 				
-			</p>
-		</div>
+				
+			</div>
+			
 	</div>
+	<img src="img/separador.jpg" width="100%">
+	<h1 style="text-align: center;">EQUIPO DE TRABAJO</h1>
+	<div class="profiles">
+		<img class="imgprofiles1" src="img/C1.jpg">
+		<img class="imgprofiles2" src="img/C2.jpg">
+		<img class="imgprofiles3" src="img/C3.jpg">
+	</div>
+	<div class="parrafosperfiles">
+		<h3 style="margin-left: 40px;">CARLOS ORLANDO SANCHEZ ACERO</h3>
+		<p class="perfilesprof">
+			Ingeniero electrónico y programador con más de cinco años de experiencia 
+			generando código para empresas del sector bancario. 
+			Creé el nuevo portal web de Santander, el cual recibe 
+			más de 1 millón de visitas al día. Los errores reportados 
+			en los micrositios del banco se redujeron en un 20% y 
+			la retención de usuarios incrementó en un 10%. Especialista 
+			en solución de problemas y trabajo en equipo.
+		</p>
+	</div>
+	<div class="parrafosperfiles">
+		<h3 style="margin-left: 40px;">JOHAN ESTEBAN PARDO GARCÍA</h3>
+		<p class="perfilesprof">
+			Programador de software con más de cuatro años de experiencia en Eriksson entre 
+			enero de 2015 y marzo de 2017. Experiencia de más de cinco años en desarrollo 
+			de aplicaciones 
+			Java para el sistema operativo Android y 
+			programador de software Java en Coritel entre septiembre de 
+			2013 y diciembre de 2014 desarrollando proyectos y aplicaciones 
+			móviles Java para Android.
+		</p>
+	
+	</div>
+	<div class="parrafosperfiles">
+		<h3 style="margin-left: 40px;">CARLOS ALBERTO SESCÚN SALAZAR</h3>
+		<p class="perfilesprof">
+			Ingeniero ambiental e ingeniero de sistemas con conocimientos en el diseño, implementación y gestión de redes, 
+			desarrollo y administración de bases de datos en SQL Server, MYSQL, 
+			Oracle. Desarrollo rápido de aplicaciones software enfocado a entornos 
+			de escritorio y web en: JAVA, .NET, Python, HTML, JAVASCRIPT y PHP.
+		</p>
+	</div>
+	<footer>
+		<img src="img/fondoservicios.jpg" width="100%" height="100px">
+	</footer>
 	<script src="js/principal.js"></script>
 </body>
 </html>
