--- a/servicios.html
+++ b/servicios.html
@@ -233,7 +233,9 @@
 			</table>
 
 		</div>
+		<footer>
 		<img src="img/fondoservicios.jpg" width="100%" height="100px">
+		</footer>
 	</div>
 	<script src="js/principal.js"></script>
 </body>
