--- a/contactenos.html
+++ b/contactenos.html
@@ -39,13 +39,11 @@
 		</ul>
 	</nav>
 
-	<div class="contenedor-padre">
-		<div class="contenedor-fila" style="align-items: center;">
-			<div style="width: 50%;">
-				<img src="img/biogestor-1.jpg" class="imagen-100" alt="">
-			</div>
-			<div style="width: 50%; height: 100%; display: flex; align-items: center;">
-				<form class="formulario-contactenos">
+	<div class="contenedor-padre" style="height: calc( 100vh - 60px ); ">
+		<div class="contenedor-fila" style="align-items: center; height: 100%;">
+			
+			<div style="width: 30%; height: 100%; display: flex; align-items: center;">
+				<form class="formulario-contactenos" style="width: 100%; padding-left: 10px; padding-right: 10px;">
 					<div class="grupo">
 						<h1>Formulario de contacto</h1>
 					</div>
@@ -71,6 +69,13 @@
 						</button>
 					</div>
 				</form>
+			</div>
+			<div style="width: 70%; height: 100%;">
+				<img 
+				src="img/imagen2.jpg" 
+				style="width: 100%; height: 100%; object-fit: cover;" 
+				alt=""
+				>
 			</div>
 		</div>
 	</div>
